--- a/src/components/layout/DashboardLayout/DashBoardLayout.module.css
+++ b/src/components/layout/DashboardLayout/DashBoardLayout.module.css
@@ -2,8 +2,10 @@
   display: flex;
   flex-direction: row;
   min-height: 100vh;
+  padding: 2rem;
 }
 
-.dashboard > main {
+.main {
   flex-grow: 1;
+  padding: 2rem;
 }
