--- a/src/components/project/NewProjectForm/NewProjectForm.module.css
+++ b/src/components/project/NewProjectForm/NewProjectForm.module.css
@@ -1,9 +1,23 @@
 .form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   position: relative;
   width: max-content;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 2rem;
-  background-color: white;
+  background-color: transparent;
+}
+
+.form > div {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.form > .buttons {
+  display: flex;
+  flex-direction: row;
 }
