--- a/src/components/ui/Button/Buttom.module.css
+++ b/src/components/ui/Button/Buttom.module.css
@@ -1,4 +1,5 @@
-.navlink {
+.button {
+  font-family: inherit;
   font-size: var(--text-size);
   color: var(--text-color);
   text-align: center;
@@ -9,7 +10,9 @@
   margin: 1rem;
   border: 1px solid var(--primary-color);
   border-radius: var(--border-radius);
+  background-color: transparent;
   transition: color 0.2s, border-color 0.2s, background-color 0.2s;
+  cursor: pointer;
 }
 
 .accent {
@@ -17,13 +20,13 @@
   background-color: var(--primary-color);
 }
 
-.navlink:hover,
-.navlink:focus {
+.button:hover,
+.button:focus {
   color: var(--bg-color);
   border-color: var(--secondary-color);
   background-color: var(--secondary-color);
 }
 
-.navlink > svg {
+.button > svg {
   margin-right: 1rem;
 }
