--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,14 @@
 :root {
+  /* --text-color: #070606; */
   --text-color: #070606;
-  --primary-color: #fff1eb;
-  --secondary-color: #ace0f9;
-  --text-size: clamp(1.6rem, 3vw, 2rem);
-  --border-radius: 10px;
+  /* --primary-color: #fff1eb; */
+  --primary-color: #a3d5ff;
+  /* --secondary-color: #ace0f9; */
+  --secondary-color: #83c9f4;
+  --bg-color: #d9f0ff;
+  --text-size: clamp(1.4rem, 3vw, 1.8rem);
+  --text-size-projects: clamp(1.2rem, 3vw, 1.4rem);
+  --border-radius: 5px;
 }
 
 * {
@@ -19,9 +24,10 @@ html {
 
 body {
   min-height: 100vh;
-  background-image: linear-gradient(
+  /* background-image: linear-gradient(
     to top,
     var(--primary-color) 0%,
     var(--secondary-color) 100%
-  );
+  ); */
+  background-color: var(--bg-color);
 }
