--- a/src/components/ui/Link/Link.module.css
+++ b/src/components/ui/Link/Link.module.css
@@ -10,6 +10,13 @@
   border: 1px solid var(--primary-color);
   border-radius: var(--border-radius);
   transition: color 0.2s, border-color 0.2s, background-color 0.2s;
+  white-space: nowrap;
+}
+
+.project-navbar-link {
+  font-size: var(--text-size-projects);
+  padding: 1rem 2rem;
+  margin: 0rem 1rem;
 }
 
 .accent {
