--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,6 +5,7 @@
   --primary-color: #a3d5ff;
   /* --secondary-color: #ace0f9; */
   --secondary-color: #83c9f4;
+  --opacity-color: rgb(163, 213, 255, 0.3);
   --bg-color: #d9f0ff;
   --text-size: clamp(1.4rem, 3vw, 1.8rem);
   --text-size-projects: clamp(1.2rem, 3vw, 1.4rem);
@@ -30,4 +31,10 @@ body {
     var(--secondary-color) 100%
   ); */
   background-color: var(--bg-color);
+}
+
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
