--- a/src/components/ui/Link/Link.module.css
+++ b/src/components/ui/Link/Link.module.css
@@ -5,8 +5,8 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  padding: 2rem;
-  margin: 1rem;
+  padding: 1rem;
+  margin: 0.5rem;
   border: 1px solid var(--primary-color);
   border-radius: var(--border-radius);
   transition: color 0.2s, border-color 0.2s, background-color 0.2s;
@@ -33,4 +33,11 @@
 
 .navlink > svg {
   margin-right: 1rem;
+}
+
+@media (min-width: 640px) {
+  .navlink {
+    padding: 2rem;
+    margin: 1rem;
+  }
 }
