--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,3 +38,8 @@ input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+svg,
+img {
+  display: block;
+}
