--- a/src/components/layout/DashboardLayout/DashBoardLayout.module.css
+++ b/src/components/layout/DashboardLayout/DashBoardLayout.module.css
@@ -24,6 +24,9 @@
 @media (min-width: 1024px) {
   .dashboard {
     flex-direction: row;
-    padding: 2rem;
+  }
+
+  .main {
+    margin-left: 25rem;
   }
 }
