--- a/src/components/layout/DashboardNavbar/DashboardNavbar.module.css
+++ b/src/components/layout/DashboardNavbar/DashboardNavbar.module.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   height: 100%;
+  max-height: 100vh;
   padding: 2rem;
 }
 
@@ -32,21 +33,21 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  max-height: 10rem;
-  margin-bottom: 2rem;
+  max-height: 12rem;
+  padding: 1rem 1rem 2rem;
   overflow: auto;
 }
 
 .list {
   font-size: var(--text-size-projects);
   margin-top: 1rem;
-  text-align: right;
   list-style-position: inside;
 }
 
 .list a {
   color: var(--text-color);
   transition: color 0.2s;
+  word-break: break-all;
 }
 
 .list a:hover {
@@ -68,6 +69,8 @@
 
 @media (min-width: 1024px) {
   .nav {
+    position: fixed;
+    max-width: 25rem;
     border-right: 1px solid var(--text-color);
   }
 
