--- a/src/components/ui/Input/Input.module.css
+++ b/src/components/ui/Input/Input.module.css
@@ -43,6 +43,15 @@
   font-size: calc(0.6 * var(--text-size));
 }
 
+.error-text {
+  font-size: var(--text-size-projects);
+  position: relative;
+  top: 50%;
+  right: 2rem;
+  transform: translateY(-50%);
+  text-align: right;
+}
+
 .radio-box-container {
   display: flex;
   align-items: center;
@@ -87,4 +96,16 @@
 
 .radio-box-input:checked::before {
   transform: scale(1);
+}
+
+.error {
+  border-color: var(--error-color);
+  color: var(--error-color);
+  animation: blink 0.5s linear infinite;
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0;
+  }
 }
