--- a/src/components/ui/Select/Select.module.css
+++ b/src/components/ui/Select/Select.module.css
@@ -11,9 +11,10 @@
   transform: translateY(-50%);
   padding: 0 0.5rem;
   background-color: var(--bg-color);
+  z-index: 1;
 }
 
-.container select {
+.select {
   font-family: inherit;
   font-size: inherit;
   color: var(--text-color);
@@ -26,6 +27,18 @@
   transition: border-color 0.2s;
 }
 
-.container select:focus {
+.select:focus {
   border-color: var(--secondary-color);
+}
+
+.error {
+  border-color: var(--error-color);
+  color: var(--error-color);
+  animation: blink 0.5s linear infinite;
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0;
+  }
 }
