--- a/src/components/ui/Link/Link.module.css
+++ b/src/components/ui/Link/Link.module.css
@@ -27,8 +27,8 @@
 .navlink:hover,
 .navlink:focus {
   color: var(--bg-color);
-  border-color: var(--secondary-color);
-  background-color: var(--secondary-color);
+  border-color: var(--accent-color);
+  background-color: var(--accent-color);
 }
 
 .navlink > svg {
