--- a/src/components/layout/Navbar/Navbar.module.css
+++ b/src/components/layout/Navbar/Navbar.module.css
@@ -1,3 +1,9 @@
+.header {
+  width: 100%;
+  max-width: 144rem;
+  margin: 0 auto;
+}
+
 .nav {
   display: flex;
   justify-content: space-between;
