--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,8 @@
   --bg-color: #f5f5f5; */
 
   --error-color: #d8000c;
+  --text-primary-heading-size: clamp(2.4rem, 5vw, 3.6rem);
+  --text-secondary-headings-size: clamp(2.4rem, 5vw, 1.8rem);
   --text-size: clamp(1.3rem, 3vw, 1.8rem);
   --text-size-projects: clamp(1rem, 3vw, 1.4rem);
   --border-radius: 5px;
@@ -46,7 +48,21 @@ input[type='number']::-webkit-outer-spin-button {
   margin: 0;
 }
 
+input[type='number'] {
+  -moz-appearance: textfield;
+}
+
 svg,
 img {
   display: block;
+}
+
+section {
+  padding: 5rem 4rem;
+}
+
+@media (min-width: 1024px) {
+  section {
+    padding: 10rem 4rem;
+  }
 }
