--- a/src/components/homepage/Cards/Card/Card.module.css
+++ b/src/components/homepage/Cards/Card/Card.module.css
@@ -12,6 +12,7 @@
 .image {
   max-width: 70%;
   height: 100%;
+  width: auto;
   margin: auto;
   object-fit: contain;
   box-shadow: -5px 10px 15px 5px rgba(0, 0, 0, 0.25);
