--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -61,6 +61,10 @@ section {
   padding: 5rem 4rem;
 }
 
+button {
+  font-family: inherit;
+}
+
 @media (min-width: 1024px) {
   section {
     padding: 10rem 4rem;
