--- a/src/components/layout/DashboardNavbar/DashboardNavbar.module.css
+++ b/src/components/layout/DashboardNavbar/DashboardNavbar.module.css
@@ -6,6 +6,7 @@
   height: 100%;
   max-height: 100vh;
   padding: 2rem;
+  background-color: var(--secondary-color);
 }
 
 .logo {
@@ -71,7 +72,6 @@
   .nav {
     position: fixed;
     max-width: 25rem;
-    border-right: 1px solid var(--text-color);
   }
 
   .list-container {
