--- a/src/components/project/NewCategoryElementForm/NewCategoryElementForm.module.css
+++ b/src/components/project/NewCategoryElementForm/NewCategoryElementForm.module.css
@@ -1,5 +1,8 @@
 .form {
   font-size: var(--text-size--projects);
+  position: relative;
+  right: 50%;
+  transform: translate(50%, 0%);
   width: 100%;
   max-width: 100rem;
 }
