--- a/src/components/ui/Input/Input.module.css
+++ b/src/components/ui/Input/Input.module.css
@@ -26,18 +26,18 @@
   width: 100%;
   height: 100%;
   padding: 1.5rem;
-  border: 1px solid var(--text-color);
+  border: 1px solid var(--primary-color);
   border-radius: var(--border-radius);
   background-color: transparent;
   outline: none;
   transition: border-color 0.2s;
 }
 
-.input:focus {
+.input:focus-visible {
   border-color: var(--accent-color);
 }
 
-.input:focus ~ .label,
+.input:focus-visible ~ .label,
 .input:not(:placeholder-shown) ~ .label {
   top: 0;
   font-size: calc(0.6 * var(--text-size));
@@ -67,17 +67,21 @@
   transition: color 0.2s;
 }
 
-.radio-box-label:hover {
-  color: var(--accent-color);
-}
-
 .radio-box-input {
   appearance: none;
   font: inherit;
   height: 100%;
   aspect-ratio: 1/1;
-  border: 1px solid var(--text-color);
+  border: 1px solid var(--primary-color);
   border-radius: var(--border-radius);
+  outline: none;
+}
+
+.radio-box-input:focus-visible,
+.radio-box-input:hover,
+.radio-box-label:hover {
+  border-color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .radio-box-input {
