--- a/src/components/ui/Select/Select.module.css
+++ b/src/components/ui/Select/Select.module.css
@@ -20,7 +20,7 @@
   color: var(--text-color);
   height: 100%;
   padding: 1.5rem;
-  border: 1px solid var(--text-color);
+  border: 1px solid var(--primary-color);
   border-radius: var(--border-radius);
   background-color: transparent;
   outline: none;
