--- a/src/components/project/ProjectCategory/ProjectCategory.module.css
+++ b/src/components/project/ProjectCategory/ProjectCategory.module.css
@@ -4,7 +4,8 @@
   width: 100%;
   text-align: center;
   margin: 0 auto;
-  border-collapse: collapse;
+  border-spacing: 0;
+  box-shadow: -1px 10px 30px -20px rgba(66, 68, 90, 1);
 }
 
 .table caption {
@@ -12,13 +13,37 @@
   margin-bottom: 1rem;
 }
 
+.table th:first-child {
+  border-top-left-radius: var(--border-radius);
+}
+
+.table th:last-child {
+  border-top-right-radius: var(--border-radius);
+}
+
+.table tr:last-child td:last-child {
+  border-bottom-right-radius: var(--border-radius);
+}
+
+.table tr:last-child td:first-child {
+  border-bottom-left-radius: var(--border-radius);
+}
+
 .table thead {
   margin-bottom: 1rem;
 }
 
-.table td,
+.table thead tr {
+  background-color: var(--primary-color);
+  margin: 1rem;
+}
+
 .table th {
-  padding: 0.25rem 0.25rem;
+  padding: 1rem 0.5rem;
+}
+
+.table td {
+  padding: 0 0.5rem;
 }
 
 .table td:nth-of-type(2),
@@ -26,7 +51,7 @@
   text-align: left;
 }
 
-.body tr:nth-child(2n + 1) {
+.body tr:nth-child(2n) {
   background-color: var(--secondary-color);
 }
 
@@ -51,15 +76,11 @@
 }
 
 @media (min-width: 375px) {
-  .table td,
   .table th {
-    padding: 0.25rem 0.5rem;
+    padding: 1rem;
   }
-}
 
-@media (min-width: 576px) {
-  .table td,
-  .table th {
-    padding: 0.5rem 1rem;
+  .table td {
+    padding: 0 1rem;
   }
 }
