--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -5,14 +5,6 @@
   --accent-color: #0d5c91;
   --opacity-color: rgb(15, 107, 169, 0.3);
   --bg-color: #d0eafb;
-
-  /* --text-color: #1a1a19;
-  --primary-color: #abacaa;
-  --secondary-color: #ffffff;
-  --accent-color: #777977;
-  --opacity-color: rgb(171, 172, 170, 0.3);
-  --bg-color: #f5f5f5; */
-
   --error-color: #d8000c;
   --text-primary-heading-size: clamp(2.4rem, 5vw, 3.6rem);
   --text-secondary-headings-size: clamp(2.4rem, 5vw, 1.8rem);
@@ -33,12 +25,8 @@ html {
 }
 
 body {
+  position: relative;
   min-height: 100vh;
-  /* background-image: linear-gradient(
-    to top,
-    var(--primary-color) 0%,
-    var(--secondary-color) 100%
-  ); */
   background-color: var(--bg-color);
 }
 
