--- a/src/components/login/LoginFormContainer/LoginFormContainer.module.css
+++ b/src/components/login/LoginFormContainer/LoginFormContainer.module.css
@@ -1,9 +1,24 @@
 .container {
-  width: 50%;
+  width: 100%;
   height: 100%;
-  padding-left: 10rem;
+  margin-top: 5rem;
 }
 
 .heading {
   font-size: var(--text-primary-heading-size);
+}
+
+@media (min-width: 640px) {
+  .container {
+    padding: 0 5rem;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    width: 50%;
+    padding-left: 10rem;
+    padding-right: 0rem;
+    margin-top: 0rem;
+  }
 }
