--- a/src/components/login/LoginFormHeader/LoginFormHeader.module.css
+++ b/src/components/login/LoginFormHeader/LoginFormHeader.module.css
@@ -36,3 +36,9 @@
   border-color: var(--accent-color);
   background-color: var(--accent-color);
 }
+
+@media (min-width: 640px) and (max-width: 1023px) {
+  .link {
+    margin-left: 5rem;
+  }
+}
