--- a/src/components/login/LoginPageContainer/LoginPageContainer.module.css
+++ b/src/components/login/LoginPageContainer/LoginPageContainer.module.css
@@ -4,17 +4,37 @@
   align-items: center;
   min-height: 100vh;
   margin: 0 auto;
-  background: linear-gradient(
-    to right,
-    var(--primary-color) 0%,
-    var(--primary-color) 50%,
-    var(--bg-color) 50%,
-    var(--bg-color) 100%
-  );
+  background: linear-gradient(var(--bg-color) 100%);
 }
 
 .section > div {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   max-width: 180rem;
+}
+
+.section div > h1,
+.section div > img:first-of-type {
+  display: none;
+}
+
+@media (min-width: 1024px) {
+  .section {
+    background: linear-gradient(
+      to right,
+      var(--primary-color) 0%,
+      var(--primary-color) 50%,
+      var(--bg-color) 50%,
+      var(--bg-color) 100%
+    );
+  }
+
+  .section > div {
+    flex-direction: row;
+  }
+
+  .section div > h1,
+  .section div > img:first-of-type {
+    display: block;
+  }
 }
