--- a/src/components/ui/Input/Input.module.css
+++ b/src/components/ui/Input/Input.module.css
@@ -34,7 +34,6 @@
 }
 
 .input:focus-visible {
-  border-width: 2px;
   border-color: var(--accent-color);
 }
 
@@ -79,8 +78,8 @@
 }
 
 .radio-box-input:focus-visible,
-.radio-box-input:hover {
-  border-width: 2px;
+.radio-box-input:hover,
+.radio-box-label:hover {
   border-color: var(--accent-color);
   color: var(--accent-color);
 }
