--- a/src/components/pages/homepage/Navbar/Navbar.module.css
+++ b/src/components/pages/homepage/Navbar/Navbar.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   max-width: 144rem;
   margin: 0 auto;
+  animation: show 1s linear 1s backwards;
 }
 
 .nav {
@@ -17,5 +18,14 @@
 @media (min-width: 640px) {
   .nav {
     padding: 2rem 4rem;
+  }
+}
+
+@keyframes show {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
   }
 }
