--- a/src/components/pages/homepage/Accordion/AccordionItem/AccordionItem.module.css
+++ b/src/components/pages/homepage/Accordion/AccordionItem/AccordionItem.module.css
@@ -33,16 +33,13 @@
 
 .text {
   max-height: 0;
-  opacity: 0;
   overflow: hidden;
-  transition: opacity 0.3s ease-in-out, max-height 1s ease-in-out;
+  transition: max-height 0.3s ease-in-out;
 }
 
 .text p {
-  display: none;
   padding: 0 2rem 2rem;
   opacity: 0;
-  overflow: hidden;
   transition: opacity 0.5s ease-in-out;
 }
 
@@ -54,12 +51,10 @@
 }
 
 .show {
-  max-height: 100rem;
-  opacity: 1;
+  max-height: 30rem;
 }
 
 .show p {
-  display: block;
   opacity: 1;
 }
 
