--- a/src/components/pages/homepage/Cards/Card/Card.module.css
+++ b/src/components/pages/homepage/Cards/Card/Card.module.css
@@ -12,7 +12,7 @@
 .image {
   max-width: 20rem;
   height: 100%;
-  box-shadow: -5px 10px 15px 5px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--box-shadow);
 }
 
 .svg > svg {
