--- a/src/components/pages/homepage/Hero/Hero.module.css
+++ b/src/components/pages/homepage/Hero/Hero.module.css
@@ -21,7 +21,7 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
-  box-shadow: -5px 10px 15px 5px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--box-shadow);
 }
 
 @media (min-width: 1024px) {
