--- a/src/components/pages/loginpage/LoginFormHeader/LoginFormHeader.module.css
+++ b/src/components/pages/loginpage/LoginFormHeader/LoginFormHeader.module.css
@@ -9,7 +9,7 @@
   height: 100%;
   margin: 5rem 0;
   object-fit: contain;
-  box-shadow: -5px 10px 15px 5px rgba(0, 0, 0, 0.25);
+  box-shadow: var(--box-shadow);
 }
 
 .link {
