--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,7 @@
   --text-size: clamp(1.6rem, 3vw, 2rem);
   --text-size-projects: clamp(1.4rem, 3vw, 1.8rem);
   --border-radius: 5px;
+  --box-shadow: -5px 10px 15px 5px rgba(0, 0, 0, 0.25);
 }
 
 * {
