--- a/src/components/layout/DashboardNavbar/DashboardNavbar.module.css
+++ b/src/components/layout/DashboardNavbar/DashboardNavbar.module.css
@@ -20,6 +20,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 1rem;
   width: 100%;
   margin-top: 1rem;
 }
@@ -28,35 +29,6 @@
   display: flex;
   align-items: center;
   gap: 1rem;
-}
-
-.list-container {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  max-height: 12rem;
-  padding: 1rem 1rem 2rem;
-  overflow: auto;
-}
-
-.list {
-  font-size: var(--text-size-projects);
-  margin-top: 1rem;
-  list-style-position: inside;
-}
-
-.list a {
-  color: var(--text-color);
-  transition: color 0.2s;
-  word-break: break-all;
-}
-
-.list a:hover {
-  color: var(--accent-color);
-}
-
-.list::marker {
-  color: var(--primary-color);
 }
 
 .icon {
@@ -72,10 +44,6 @@
   .nav {
     position: fixed;
     max-width: 25rem;
-  }
-
-  .list-container {
-    max-height: 70rem;
   }
 
   .buttons {
