feat: post operation to database, change notification to context

--- a/src/components/pages/profilpage/ProfilpageContainer/ProfilpageContainer.module.css
+++ b/src/components/pages/profilpage/ProfilpageContainer/ProfilpageContainer.module.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-.section svg {
+.section > svg {
   max-width: 100%;
   height: max(20vw, 25rem);
   margin: 0 auto 2rem;
