--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -28,8 +28,17 @@ html {
 
 body {
   position: relative;
-  min-height: 100vh;
   background-color: var(--bg-color);
+}
+
+#__next {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+main {
+  flex-grow: 1;
 }
 
 input[type='number']::-webkit-inner-spin-button,
