--- a/src/components/project/ProjectCategory/ProjectCategory.module.css
+++ b/src/components/project/ProjectCategory/ProjectCategory.module.css
@@ -39,11 +39,7 @@
 }
 
 .table th {
-  padding: 1rem 0.5rem;
-}
-
-.table td {
-  padding: 0 0.5rem;
+  padding: 0.5rem 0.1rem;
 }
 
 .table td:nth-of-type(2),
@@ -79,12 +75,20 @@
   margin: 2rem;
 }
 
+@media (min-width: 350px) {
+  .table th {
+    padding: 0.5rem 0.25rem;
+  }
+}
+
 @media (min-width: 375px) {
   .table th {
-    padding: 1rem;
+    padding: 0.5rem;
   }
+}
 
-  .table td {
-    padding: 0 1rem;
+@media (min-width: 420px) {
+  .table th {
+    padding: 1rem;
   }
 }
