--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,22 @@
   margin: 0;
   padding: 0;
   text-decoration: none;
+  scrollbar-width: thin;
+  scrollbar-color: var(--bg-color);
+}
+
+*::-webkit-scrollbar {
+  width: 1rem;
+}
+
+*::-webkit-scrollbar-track {
+  scrollbar-color: var(--bg-color);
+}
+
+*::-webkit-scrollbar-thumb {
+  background: var(--primary-color);
+  border-radius: 0.5rem;
+  border: 1px solid var(--primary-color);
 }
 
 html {
