feat: theme switcher component

--- a/src/components/pages/homepage/Accordion/AccordionItem/AccordionItem.module.css
+++ b/src/components/pages/homepage/Accordion/AccordionItem/AccordionItem.module.css
@@ -19,6 +19,7 @@
   background-color: transparent;
   cursor: pointer;
   outline: none;
+  color: var(--text-color);
 }
 
 .heading > button:focus-visible {
