--- a/src/components/pages/homepage/Cards/Card/Card.module.css
+++ b/src/components/pages/homepage/Cards/Card/Card.module.css
@@ -30,6 +30,7 @@
 .heading {
   font-size: var(--text-secondary-headings-size);
   margin-bottom: 1rem;
+  color: var(--text-color);
 }
 
 @media (min-width: 640px) {
