--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -14,6 +14,16 @@
   --box-shadow: -5px 10px 15px 5px rgba(0, 0, 0, 0.25);
 }
 
+[data-theme='dark'] {
+  --text-color: #e0e1dd;
+  --primary-color: #1b263b;
+  --secondary-color: #415a77;
+  --accent-color: #0d1b2a;
+  --opacity-color: rgb(15, 107, 169, 0.3);
+  --bg-color: #778da9;
+  --box-shadow: -5px 10px 15px 5px rgba(0, 0, 0, 0.25);
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
