--- a/src/components/project/ProjectCategory/ProjectCategory.module.css
+++ b/src/components/project/ProjectCategory/ProjectCategory.module.css
@@ -9,7 +9,7 @@
   color: var(--text-color);
   width: 100%;
   text-align: center;
-  margin: 0 auto;
+  margin: 0 auto 2rem;
   border-spacing: 0;
   box-shadow: -1px 10px 30px -20px rgba(66, 68, 90, 1);
 }
@@ -25,6 +25,7 @@
 
 .table th:last-child {
   border-top-right-radius: var(--border-radius);
+  text-align: right;
 }
 
 .table tr:last-child td:last-child {
